# CrossPlatformReplication

./: CMakeLists.txt
Server/: CMakeLists.txt
Server/include/: AbstractServer.h  LinuxServer.h  WindowsServer.h
Server/src/: ShantzCMake.cpp
ShantzCMake/: CMakeLists.txt  ShantzCMake.cpp  ShantzCMake.h  Socket.h
